@@ -345,6 +345,9 @@ OFSwitch13Device
   pipeline. At each internal, the device checks if any flow in any table is
   timed out and update port status.
 
+* ``FlowTableSize``: The maximum number of flow entries allowed on each
+  pipeline flow table.
+
 * ``PipelineCapacity``: The data rate used to model the pipeline processing
   capacity in terms of throughput. Packets exceeding the capacity will be
   discarded.
