@@ -160,6 +160,7 @@ public:
   uint64_t GetDatapathId        (void) const;
   uint64_t GetDropCounter       (void) const;
   uint64_t GetFlowModCounter    (void) const;
+  uint32_t GetFlowTableSize     (void) const;
   uint64_t GetGroupModCounter   (void) const;
   uint64_t GetMeterModCounter   (void) const;
   uint32_t GetNFlowEntries      (void) const;
@@ -583,6 +584,7 @@ private:
   struct datapath*  m_datapath;     //!< The OpenFlow datapath.
   PortList_t        m_ports;        //!< List of switch ports.
   CtrlList_t        m_controllers;  //!< Collection of active controllers.
+  uint32_t          m_fTableSize;   //!< Flow table maximum entries.
   IdPacketMap_t     m_bufferPkts;   //!< Packets saved in switch buffer.
   uint32_t          m_bufferSize;   //!< Buffer size in terms of packets.
   PipelinePacket    m_pipePkt;      //!< Packet under switch pipeline.
